--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Free AI code generator </title>
   <link rel="stylesheet" href="../../../cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
   <link href="../../css/landing-style.css" rel="stylesheet" type="text/css" />
   <link href="../../css/badge.css" rel="stylesheet" type="text/css" />
@@ -121,7 +120,7 @@
     <div class="nav-header">
       <img src="../../icons/android-chrome-512x512.png" class="nav-icon" alt="Tool Sphere Icon" width="50" height="50">
       <div class="nav-title">
-        Tool Sphere
+        Tool
       </div>
     </div>
     <div class="nav-btn">
@@ -129,18 +128,6 @@
         <span></span>
         <span></span>
         <span></span>
-      </label>
-    </div>
-
-    <div class="nav-links">
-      <div class="nav-links">
-      <a href="https://t.me/rand2m>Telegram">Telegram </a>
-      <a href="https://t.me/examples_rand2m">Telegram Example </a>
-      <a href="https://www.youtube.com/@rand2m">Youtube </a>
-      <a href="https://t.me/Ra_CyberReaperBot">Bot Hack Camera </a>
-      <a herf="https://t.me/UnBanNumber_Bot">Bot Spam Email </a>
-    </div>
-  </div>
 
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
     <h1>AI code generator </h1>
@@ -181,10 +168,6 @@
   </div>
 
 
-  <h2>تساعدك أداة AI الخاصة بي على إنشاء رمز من المطالبة الخاصة بك دون أي مفتاح API أو تسجيل الدخول المطلوب ، وهي عملية تُعرف أيضًا باسم Text to Code. يمكن لمنظمة العفو الدولية إنشاء رمز في معظم اللغات ، ويمكنك أيضًا تصحيح الكود الخاص بك باستخدام أداتك. </h2>
-
-  <!--- FAQ --->
-
   <footer id="footer"
     style="background-color: #333; color: #fff; text-align: center; padding: 10px; bottom: 0; width: 100%;">
     <p>&copy; 2025 Random Hackers Is The Best </p>
@@ -193,7 +176,6 @@
     <a href="https://t.me/r_3_j_f" style="color: #fff;">Developer </a> <br><br>
   </footer>
   <div id="cookie-consent">
-    <p>This website uses cookies for ad personalization and to enhance your browsing experience.</p>
     <button id="accept-cookies">Accept</button>
   </div>
   
