--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
       50% {
         height: 50px;
-        background-color: #02f006;
-        /*green*/
+        background-color: #000000;
+        /*black*/
       }
 
       100% {
@@ -114,23 +114,8 @@
 
 </head>
 
-<body>
-  <div class="nav">
-    <input type="checkbox" id="nav-check">
-    <div class="nav-header">
-      <img src="../../icons/android-chrome-512x512.png" class="nav-icon" alt="Tool Sphere Icon" width="50" height="50">
-      <div class="nav-title">
-        Tool
-      </div>
-    </div>
-    <div class="nav-btn">
-      <label for="nav-check">
-        <span></span>
-        <span></span>
-        <span></span>
-
   <div style="width: 100%; text-align: center; border: 0.5px solid white; border-radius: 5px;">
-    <h1>AI code generator </h1>
+    <h1 style="color:cyan;">AI code generator </h1>
     <h3 style="color:cyan;">Hello everyone!! </h3>
   </div>
   <div style="width: 100%; align-items: center; flex-direction: column; display: flex;">
@@ -148,7 +133,7 @@
     <button onclick="https://t.me/rand2m">Telegram Channel </button>
     <button id="genbtn" onclick="generate()"
       style="margin-top: 10px; width: 70%; height: 3em; background-color: transparent; color: black; font-size: 2em; border-radius: 12px; border: 1px gold solid; margin-bottom: 18px;
-    box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: white;">
+    box-shadow: rgba(69, 192, 245, 0.25) 0px 30px 60px -12px inset, rgba(69, 192, 245, 0.3) 0px 18px 36px -18px inset; color: Green;">
       GENERATE CODE
     </button>
   </div>
@@ -158,12 +143,12 @@
     <span id="bang"
       style="display: block; font-size: 22px; color: #00f541; margin-left: 8px; margin-top: 4px; margin-bottom: 12px;">Generate
       Your Code now</span> <br>
-
   </div>
-  <div id="editor" class=""
-    style="border: 0.5px solid yellow; width: 90%; margin: 0 auto; height: 90%; padding: 6px; border-radius: 12px; overflow: auto;">
+  </br>
+    <div id="editor"
+    style="border: 20px; solid yellow: 0 auto; width: 100%; margin: 1px solid #000000; border-radius: 12px; overflow: auto;">
     your output will show here
-    </pre>
+    </span> <br> 
 
   </div>
 
